2004-06-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Activate conditionals in ConfigureParams.

2004-07-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: _Un_restrict use of %a to PatchScript.

2004-07-19  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Run CompileScript (if one is explicitly defined)
	for dummy packages instead of just crashing.
	* VirtPackage.pm: Add CompileScript field: crash with with error
	message explaining to RTFDescDetail.

2004-07-18  Max Horn <max@quendi.de>

	* Configure.pm: Fix default value for the master mirror configure option.

2004-07-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Change get_tarball to return undef (instead of
	"none") if no such suffix. Fix get_checksum to really return undef
	if field not in .info.
	
2004-07-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Restrict use of %a to PatchScript.

2004-07-17  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: make sure a minimum of java versions are filled
	in so we don't get warnings.

2004-07-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm, Services.pm, Status.pm, VirtPackage.pm: import
	branch:virt_always_exists: virtual packages of non-installed
	things now appear as "uninstalled" rather than not even existing.

	* VirtPackage.pm (dmacks): Replaced dpkg "status" strings with
	constants.  Changed query_package to respect "status" (parallel to
	that method in Status.pm) instead of assuming presence of package
	entry is equivalent to it being installed.
	* PkgVersion.pm (rangerrick): Check whether VirtPackage's return
	value is undefined, since "0" is a true version, undefined is a
	non- existent one.
	* Services.pm (rangerrick): Treat undefined values passed to a
	version compare as a false value.
	* Status.pm (rangerrick): Simplify status checking.
	* VirtPackage.pm (rangerrick): Change all virtuals to exist even